--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 const mz=new mzPlayer(
 	{
 		container: '#player',  		//容器id
-		pic: 'bg.jpg',         		//视频封面
 		video:{
-				  src: 'demo.mp4'  //视频地址
+				  src: 'http://s1.ananas.chaoxing.com/video/7b/c2/b1/6592d416b234e2597e9ce9e30b28e3aa/hd.mp4'  //视频地址
 		      },
 		danmaku:''               //是否开启弹幕功能  暂不支持
    	}
