--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>Mzplayer Demo</title>
 <link rel="shortcut icon" href="favicon.ico">
-<link type="text/css" href="Mzplayer.css" rel="stylesheet">
+<link type="text/css" href="https://cdn.jsdelivr.net/gh/prince3661/Mzplayer@1.1.8/Mzplayer.min.css" rel="stylesheet">
 <style>
 /*#player{
 	left: 0;
@@ -27,12 +27,11 @@
 
 </style>
 </head>
-<script src="jquery.min.js"></script>	
-<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <body>
 <div id="player"></div>
 </body>
-<script src="Mzplayer.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/prince3661/Mzplayer@1.1.8/Mzplayer.min.js"></script>
 <script type="text/javascript">
 //播放器调用方法
 const mz=new mzPlayer(
